--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -47,12 +47,16 @@
         android:id="@+id/logout"
         android:layout_width="68dp"
         android:layout_height="36dp"
+        android:layout_marginEnd="300dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
         android:layout_weight="1"
         android:onClick="onMapClearClick"
         android:text="@string/logout"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/userEmail"
