--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,6 +8,7 @@
 
     <Button
         android:id="@+id/sendLocationToFireBase"
+        style="@android:style/Widget.Material.Button.Colored"
         android:layout_width="114dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -21,6 +22,7 @@
 
     <Button
         android:id="@+id/clear"
+        style="@android:style/Widget.Material.Button.Colored"
         android:layout_width="73dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -32,6 +34,7 @@
 
     <Button
         android:id="@+id/login"
+        style="@android:style/Widget.Material.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -42,21 +45,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/sendLocationToFireBase"
         app:layout_constraintLeft_toLeftOf="parent"/>
-
-    <Button
-        android:id="@+id/logout"
-        android:layout_width="68dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="300dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_weight="1"
-        android:onClick="onMapClearClick"
-        android:text="@string/logout"
-        android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/userEmail"
