Added Radius button and radius text

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -12,5 +12,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               tools:context="ec601.aty.food_app.MapsActivity"/>
-    <include layout="@layout/content_main"/>
+
+    <include
+        layout="@layout/content_main"/>
 </RelativeLayout>
