--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
         style="@android:style/Widget.Material.Button.Colored"
         android:layout_width="114dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="92dp"
         android:layout_marginEnd="44dp"
         android:layout_weight="1"
         android:onClick="onMapPublishClick"
@@ -25,7 +25,8 @@
         style="@android:style/Widget.Material.Button.Colored"
         android:layout_width="73dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="92dp"
+        android:layout_marginRight="44dp"
         android:layout_weight="1"
         android:onClick="onMapClearClick"
         android:text="@string/clear_map"
@@ -37,8 +38,8 @@
         style="@android:style/Widget.Material.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="92dp"
+        android:layout_marginEnd="12dp"
         android:layout_weight="1"
         android:onClick="onMapLoginClick"
         android:text="@string/login"
@@ -50,7 +51,35 @@
         android:id="@+id/userEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="None"
+        android:text="@string/none"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <Button
+        android:id="@+id/findLocations"
+        style="@android:style/Widget.Material.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="28dp"
+        android:layout_marginLeft="24dp"
+        android:onClick="onMapFindLocationsClick"
+        android:text="@string/query_locations"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <EditText
+        android:id="@+id/radiusText"
+        android:layout_width="182dp"
+        android:layout_height="43dp"
+        android:layout_marginBottom="28dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginStart="8dp"
+        android:ems="10"
+        android:hint="@string/query_radius"
+        android:inputType="number"
+        android:digits="0123456789."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/findLocations"/>
+
 </android.support.constraint.ConstraintLayout>
