--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="114dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="92dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginEnd="32dp"
         android:layout_weight="1"
         android:onClick="onMapPublishClick"
         android:text="@string/publish_location"
@@ -27,7 +27,7 @@
         android:layout_width="73dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="92dp"
-        android:layout_marginRight="44dp"
+        android:layout_marginRight="16dp"
         android:layout_weight="1"
         android:onClick="onMapClearClick"
         android:text="@string/clear_map"
@@ -40,13 +40,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="92dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginStart="8dp"
         android:layout_weight="1"
         android:onClick="onMapLoginClick"
         android:text="@string/login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/sendLocationToFireBase"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
         android:id="@+id/userEmail"
