--- a/app/src/main/res/layout/new_activity_maps.xml
+++ b/app/src/main/res/layout/new_activity_maps.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <android.support.constraint.ConstraintLayout>
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                        android:id="@+id/drawer_layout"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent">
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="Holy Operating Systems, Batdroid!"
-            android:textSize="24sp"
+            android:layout_marginTop="100dp"
             android:gravity="center"
-            android:layout_marginTop="100dp"/>
+            android:text="Holy Operating Systems, Batdroid!"
+            android:textSize="24sp"/>
 
     </android.support.constraint.ConstraintLayout>
 
@@ -21,4 +25,4 @@
         android:layout_gravity="left|start"
         android:background="#ffeeeeee"/>
 
-</DrawerLayout>
+</android.support.v4.widget.DrawerLayout>
