--- a/app/src/main/res/layout/consume_dialog.xml
+++ b/app/src/main/res/layout/consume_dialog.xml
@@ -8,13 +8,23 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/restaurantTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="68dp"
+        android:layout_marginLeft="36dp"
         android:layout_marginTop="48dp"
-        android:text="@string/the_restaurant_has"
+        android:text="TextView"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/hasTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/has"
+        android:layout_marginTop="48dp"
+        android:layout_marginStart="2dp"
+        app:layout_constraintStart_toEndOf="@+id/restaurantTextView"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
@@ -27,7 +37,7 @@
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/hasTextView"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
@@ -44,6 +54,16 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
+        android:id="@+id/ofFoodTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/of_food"
+        android:layout_marginTop="48dp"
+        android:layout_marginStart="2dp"
+        app:layout_constraintStart_toEndOf="@+id/units_text_box_1"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
         android:id="@+id/textView2"
         android:layout_width="280dp"
         android:layout_height="19dp"
@@ -51,7 +71,7 @@
         android:text="@string/how_much_do_you_want_to_pickup"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"/>
+        app:layout_constraintTop_toBottomOf="@+id/restaurantTextView"/>
 
     <EditText
         android:id="@+id/consume_quantity_box"
