--- a/app/src/main/res/layout/consume_dialog.xml
+++ b/app/src/main/res/layout/consume_dialog.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="350dp"
-    android:layout_height="300dp">
+    android:layout_height="300dp"
+    android:theme="@android:style/Theme.Material.Light">
 
 
     <TextView
